exports[`test calls ImagePicker if pickImage is true 1`] = `
Array [
  Array [
    Object {
      "avatarURL": "heythere",
      "type": "SELECT_KID_IMAGE",
    },
  ],
  Array [
    Object {
      "type": "NEXT_STEP",
    },
  ],
  Array [
    [Function],
  ],
  Array [
    [Function],
  ],
]
`;

exports[`test renders the <SetImage> component 1`] = `
<View
  style={Object {}}>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "backgroundColor": "transparent",
          "color": "#FFF",
          "fontFamily": "Raleway-ExtraBold",
          "fontSize": 30,
          "marginBottom": -2,
          "textAlign": "center",
        }
      }>
      [missing \"en.general.thanks\" translation]
      , 
      Name
      !
    </Text>
    <View
      style={
        Object {
          "height": 32,
        }
      } />
    <Image
      animation={undefined}
      duration={undefined}
      iterationCount={undefined}
      source={1}
      style={
        Object {
          "borderColor": undefined,
          "borderRadius": 102,
          "borderWidth": 5.828571428571428,
          "height": 204,
          "marginBottom": 20.4,
          "shadowColor": "rgba(0,0,0,0.5)",
          "shadowOffset": Object {
            "height": 2,
          },
          "shadowRadius": 5,
          "width": 204,
        }
      } />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "color": "#FFF",
          "fontFamily": "Raleway-Regular",
          "fontSize": 16,
          "textAlign": "center",
        }
      }>
      [missing \"en.setImage.setAPictureFor\" translation]
       
      Jeff
      .
    </Text>
    <View
      style={
        Object {
          "height": 32,
        }
      } />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "color": "#FFF",
          "fontFamily": "Raleway-Regular",
          "fontSize": 16,
          "textAlign": "center",
        }
      }>
      [missing \"en.setImage.dontWorry\" translation]
      .
    </Text>
    <View
      style={
        Object {
          "height": 24,
        }
      } />
    <View
      style={
        Object {
          "height": 32,
        }
      } />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 686,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 20,
          }
        }>
        [missing \"en.setImage.notNow\" translation]
         
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 20,
          }
        }>
        [missing \"en.setImage.chooseAPicture\" translation]
         
      </Text>
    </View>
  </View>
</View>
`;

exports[`test uses a default image of pickImage is false 1`] = `
Array [
  Array [
    Object {
      "avatarURL": "http://i.imgur.com/ZrwsRFD.png",
      "type": "SELECT_KID_IMAGE",
    },
  ],
  Array [
    Object {
      "type": "NEXT_STEP",
    },
  ],
  Array [
    [Function],
  ],
  Array [
    [Function],
  ],
]
`;
